rajout de probabilités que l'exploit réussisse

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "import csv\n",
     "import re\n",
     "import numpy as np\n",
+    "import concurrent.futures\n",
     "from pathlib import Path\n",
     "from joblib import Parallel, delayed\n",
     "from BAG_Code_tw520.BayesianAttackGraphForCVSS import parse_dot\n",
@@ -40,10 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
+    "MAX = 0.999\n",
+    "\n",
     "def parse_dot(dot_string):\n",
     "    nodes = {}\n",
     "    edges = []\n",
@@ -91,12 +94,12 @@
     "                    probs.append(float(cvss_dict[elem[1]['CVE']]))\n",
     "                else:\n",
     "                    # We use the probability associated to the rule if not null\n",
-    "                    tmp = float(elem[1]['label'].split(':')[2])\n",
+    "                    tmp = float(nodes[edge[0]]['label'].split(':')[2])\n",
     "                    if tmp != 0:\n",
     "                        print(elem[1]['label'])\n",
     "                        probs.append(float(tmp))\n",
     "                    else: \n",
-    "                        probs.append(0.9999999)\n",
+    "                        probs.append(MAX)\n",
     "        npa = len(source)\n",
     "        #We draw the probability from the distribution of CVSS scores\n",
     "        if r:\n",
@@ -154,45 +157,68 @@
     "\n",
     "def to_dot(BAG, nodes, evidences):\n",
     "    dot = 'digraph G {\\n'\n",
-    "    prop = BeliefPropagation(BAG)\n",
     "    regex = r\"\\d+:RULE \\d+ \\((.*?)\\):\\d+\\.\\d+\"\n",
-    "    for node in  nodes.keys():\n",
+    "    print(BAG)\n",
+    "    def node_to_dot(node):\n",
     "        print(node)\n",
     "        if node not in evidences.keys():\n",
+    "            prop = BeliefPropagation(BAG)\n",
     "            prob = prop.query([node], evidence=evidences).values[1]\n",
-    "            # prob = 0.000\n",
-    "            probH = int(prob * 255)\n",
-    "            color = '#' + format(probH, '02X') +''+ format(255-probH, '02X') + '00'\n",
-    "            CVE = nodes[node]['CVE']\n",
-    "            LABEL = nodes[node]['label']\n",
-    "            number = LABEL.split(\":\")[0]\n",
-    "            prob = \"{:.3f}\".format(prob)\n",
-    "            shape = nodes[node]['shape']\n",
-    "            if CVE != 'null':\n",
-    "                dot += f'  {node} [label=\\\"{node} ({number})\\\\n{CVE}\\\\n{prob}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
+    "            print(node)\n",
+    "        else:\n",
+    "            prob = 1\n",
+    "        probH = int(prob * 255)\n",
+    "        color = '#' + format(probH, '02X') +''+ format(255-probH, '02X') + '00'\n",
+    "        CVE = nodes[node]['CVE']\n",
+    "        LABEL = nodes[node]['label']\n",
+    "        number = LABEL.split(\":\")[0]\n",
+    "        prob = \"{:.3f}\".format(prob)\n",
+    "        shape = nodes[node]['shape']\n",
+    "        if CVE != 'null':\n",
+    "            return f'  {node} [label=\\\"{node} ({number})\\\\n{CVE}\\\\n{prob}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
+    "        else:\n",
+    "            correspondance = re.search(regex, LABEL)\n",
+    "            if correspondance:\n",
+    "                return f'  {node} [label=\\\"{node} ({number})\\\\n{correspondance.group(1)}\\\\n{prob}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
     "            else:\n",
-    "                correspondance = re.search(regex, LABEL)\n",
-    "                if correspondance:\n",
-    "                    dot += f'  {node} [label=\\\"{node} ({number})\\\\n{correspondance.group(1)}\\\\n{prob}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
-    "                else:\n",
-    "                    dot += f'  {node} [label=\"{node} ({number})\\\\n{LABEL}\\\\n{prob}\", color=\"{color}\", penwidth=3, shape=\"{shape}\"];\\n'\n",
+    "                return f'  {node} [label=\"{node} ({number})\\\\n{LABEL}\\\\n{prob}\", color=\"{color}\", penwidth=3, shape=\"{shape}\"];\\n'\n",
+    "    with concurrent.futures.ThreadPoolExecutor(max_workers=len(nodes)) as executor:\n",
+    "        # Exécution des fonctions parallèles avec les paramètres\n",
+    "        resultats = list(executor.map(node_to_dot, nodes.keys()))\n",
+    "        for result in resultats:\n",
+    "            try:\n",
+    "                dot += result\n",
+    "            except:\n",
+    "                print(result)\n",
     "    for edge in BAG.edges():\n",
-    "        if edge[0] in nodes.keys() and edge[1] in nodes.keys():\n",
-    "            dot += f'  {edge[0]} -> {edge[1]};\\n'\n",
+    "        # if edge[0] in nodes.keys() and edge[1] in nodes.keys():\n",
+    "        dot += f'  \\\"{edge[0]}\\\" -> \\\"{edge[1]}\\\";\\n'\n",
     "    dot += '}'\n",
-    "    return dot\n"
+    "    return dot\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6:RULE 6 (valid credentials may be found):0.8\n"
+      "1:admin(domain):0\n",
+      "4:dcSync(domain):0\n",
+      "4:dcSync(domain):0\n",
+      "4:dcSync(domain):0\n",
+      "7:passTheTicket(domain):0\n",
+      "7:passTheTicket(domain):0\n",
+      "10:mitm(domain):0\n",
+      "16:validCredentials(domain):0\n",
+      "17:RULE 6 (valid credentials may be found):0.8\n",
+      "22:admin(host):0\n",
+      "22:admin(host):0\n",
+      "28:lowAccess(host):0\n"
      ]
     }
    ],
@@ -201,7 +227,7 @@
     "simulation = \"selection\"\n",
     "\n",
     "# Constante for probability one \n",
-    "MAX = 0.9999\n",
+    "MAX = 0.999\n",
     "\n",
     "# Path to the folder containing the tree\n",
     "# path = os.path.join(os.getcwd(), \"/ImperialWork/Personnal_simulations/output_\" + simulation + \"/strongly_connected_components/\")\n",
@@ -230,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -238,29 +264,50 @@
      "output_type": "stream",
      "text": [
       "WARNING:pgmpy:Replacing existing CPD for 2\n",
+      "WARNING:pgmpy:Replacing existing CPD for 4\n",
       "WARNING:pgmpy:Replacing existing CPD for 6\n",
-      "WARNING:pgmpy:Replacing existing CPD for 8\n"
+      "WARNING:pgmpy:Replacing existing CPD for 8\n",
+      "WARNING:pgmpy:Replacing existing CPD for 10\n",
+      "WARNING:pgmpy:Replacing existing CPD for 13\n",
+      "WARNING:pgmpy:Replacing existing CPD for 14\n",
+      "WARNING:pgmpy:Replacing existing CPD for 16\n",
+      "WARNING:pgmpy:Replacing existing CPD for 17\n",
+      "WARNING:pgmpy:Replacing existing CPD for 19\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'tool': 'impacket', 'skills': 'L', 'Type': 'Permissions move'}\n",
+      "[3, 'impacket', 'Lskills', 'Permissions move']\n",
+      "{'tool': 'impacket', 'skills': 'L', 'Type': 'Lateral move'}\n",
+      "[5, 'impacket', 'Lskills', 'Lateral move']\n",
+      "{'tool': 'certipy', 'skills': 'L', 'Type': 'ADCS'}\n",
+      "[7, 'certipy', 'Lskills', 'ADCS']\n",
+      "{'tool': 'impacket and PetitPotam.py', 'skills': 'H', 'Type': 'No credentials'}\n",
+      "[9, 'impacket8', 'Hskills', 'No credentials']\n",
+      "{'tool': 'impacket', 'skills': 'L', 'Type': 'Known vulnerabilities'}\n",
+      "[11, 'impacket', 'Lskills', 'Known vulnerabilities']\n",
+      "{'tool': 'impacket', 'skills': 'H', 'Type': 'MITM'}\n",
+      "[7, 'impacket', 'Hskills', 'MITM']\n",
+      "{'tool': 'impacket and CVE-2020-1472-exploit.py', 'skills': 'L', 'Type': 'MITM'}\n",
+      "[7, 'impacket14', 'Lskills', 'MITM']\n",
       "{'tool': 'impacket and privexchange.py', 'skills': 'H', 'Type': 'Known vulnerabilities'}\n",
-      "[3, 'impacket2', 'Hskills', 'Known vulnerabilities']\n",
+      "[11, 'impacket16', 'Hskills', 'Known vulnerabilities']\n",
       "{'tool': 'Unknown', 'skills': 'L', 'Type': 'Privilege escalation'}\n",
       "Unknown\n",
-      "[7, 'unknown6', 'Lskills', 'Privilege escalation']\n",
+      "[18, 'unknown17', 'Lskills', 'Privilege escalation']\n",
       "{'tool': 'Unknown', 'skills': 'L', 'Type': 'CQCM'}\n",
       "Unknown\n",
-      "[5, 'unknown8', 'Lskills', 'CQCM']\n"
+      "[9, 'unknown19', 'Lskills', 'CQCM']\n"
      ]
     }
    ],
    "source": [
     "# The skills layer:\n",
-    "cpd_ALskills = TabularCPD('ALskills', 2, [[0], [1]])\n",
-    "cpd_AHskills = TabularCPD('AHskills', 2, [[1], [0]])\n",
+    "cpd_ALskills = TabularCPD('ALskills', 2, [[1-MAX], [MAX]])\n",
+    "cpd_AHskills = TabularCPD('AHskills', 2, [[MAX], [1-MAX]])\n",
     "cpd_0skills = TabularCPD('uskills', 2, [[0.5], [0.5]])\n",
     "BAG.add_edge('ALskills', 'Lskills')\n",
     "BAG.add_edge('ALskills', 'Hskills')\n",
@@ -325,13 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "BayesianNetwork with 41 nodes and 63 edges\n",
       "1\n",
       "2\n",
       "3\n",
@@ -340,6 +388,50 @@
       "6\n",
       "7\n",
       "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/homes/nmh24/.local/lib/python3.10/site-packages/pgmpy/factors/discrete/DiscreteFactor.py:796: RuntimeWarning: invalid value encountered in divide\n",
+      "  phi.values = phi.values / phi1.values\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "2\n",
+      "9\n",
+      "7\n",
+      "13\n",
+      "15\n",
+      "14\n",
+      "17\n",
+      "19\n",
+      "3\n",
+      "6\n",
+      "12\n",
+      "5\n",
+      "8\n",
+      "10\n",
+      "11\n",
+      "18\n",
+      "BayesianNetwork with 19 nodes and 22 edges\n",
       "1\n",
       "2\n",
       "3\n",
@@ -348,12 +440,41 @@
       "6\n",
       "7\n",
       "8\n",
-      "c:\\Users\\docuser\\Documents\\ImperialWork\\Personnal_simulations\\output_selection\\strongly_connected_components\\ag-nocycles_colored.dot\n"
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "1415\n",
+      "\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "2\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "5\n",
+      "7\n",
+      "1\n",
+      "12\n",
+      "13\n",
+      "11\n",
+      "17\n",
+      "15\n",
+      "19\n",
+      "14\n",
+      "18\n",
+      "/homes/nmh24/ImperialWork/Personnal_simulations/output_selection/strongly_connected_components/ag-nocycles_colored.dot\n"
      ]
     }
    ],
    "source": [
-    "evidence = {}\n",
+    "evidence = {16 : 1}\n",
     "with open(output_file, 'w') as f:\n",
     "    f.write(to_dot(BAG, nodes, evidence))\n",
     "with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
@@ -372,69 +493,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[[[1.000e+00 1.000e+00]\n",
-      "    [1.000e+00 1.000e+00]]\n",
-      "\n",
-      "   [[1.000e+00 1.000e+00]\n",
-      "    [1.000e+00 1.000e+00]]]\n",
-      "\n",
-      "\n",
-      "  [[[1.000e+00 1.000e+00]\n",
-      "    [1.000e+00 1.000e+00]]\n",
-      "\n",
-      "   [[1.000e+00 1.000e+00]\n",
-      "    [1.000e+00 1.000e-04]]]]\n",
-      "\n",
-      "\n",
-      "\n",
-      " [[[[0.000e+00 0.000e+00]\n",
-      "    [0.000e+00 0.000e+00]]\n",
-      "\n",
-      "   [[0.000e+00 0.000e+00]\n",
-      "    [0.000e+00 0.000e+00]]]\n",
-      "\n",
-      "\n",
-      "  [[[0.000e+00 0.000e+00]\n",
-      "    [0.000e+00 0.000e+00]]\n",
-      "\n",
-      "   [[0.000e+00 0.000e+00]\n",
-      "    [0.000e+00 9.999e-01]]]]]\n",
+      "+-------+-------+-----+--------------------+\n",
+      "| 16    | 16(0) | ... | 16(1)              |\n",
+      "+-------+-------+-----+--------------------+\n",
+      "| 17    | 17(0) | ... | 17(1)              |\n",
+      "+-------+-------+-----+--------------------+\n",
+      "| 15(0) | 1.0   | ... | 0.6400000000000001 |\n",
+      "+-------+-------+-----+--------------------+\n",
+      "| 15(1) | 0.0   | ... | 0.3599999999999999 |\n",
+      "+-------+-------+-----+--------------------+\n",
       "+------------+----------------+\n",
       "| Hskills    |   phi(Hskills) |\n",
       "+============+================+\n",
-      "| Hskills(0) |         0.9000 |\n",
+      "| Hskills(0) |         0.0000 |\n",
       "+------------+----------------+\n",
-      "| Hskills(1) |         0.1000 |\n",
+      "| Hskills(1) |         1.0000 |\n",
       "+------------+----------------+\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\factors\\discrete\\DiscreteFactor.py:796: RuntimeWarning: invalid value encountered in divide\n",
-      "  phi.values = phi.values / phi1.values\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "print(BAG.get_cpds(6).values)\n",
-    "print(BeliefPropagation(BAG).query(['Hskills'], evidence=evidence))\n",
+    "print(BAG.get_cpds(15))\n",
+    "print(BeliefPropagation(BAG).query([15], evidence=evidence))\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -442,10 +537,10 @@
      "evalue": "name 'evidence_loc' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[0;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[0;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[0;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'evidence_loc' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[96], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[1;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[1;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[1;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'evidence_loc' is not defined"
      ]
     }
    ],
@@ -635,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
